add：支持配置管理
