# docs/swagger.json
@@ -473,7 +473,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"删除成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"删除成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -906,7 +906,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"删除成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"删除成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -1181,9 +1181,127 @@
                 }
             }
         },
+        "/api/v1/settings": {
+            "get": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "获取配置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0, \"data\": []}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "修改配置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "配置信息",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.SettingsUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0, \"msg\": \"更新成功\", \"data\": nil}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/settings/logo": {
+            "get": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "获取 Logo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0, \"path\": logoPreview}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/settings/logoUpload": {
+            "post": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "上传 Logo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Logo",
+                        "name": "logo",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0, \"path\": logoPreview}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/site": {
             "put": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1216,7 +1334,7 @@
                 }
             },
             "post": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "consumes": [
                     "application/json"
                 ],
@@ -1257,7 +1375,7 @@
         },
         "/api/v1/site/group": {
             "put": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1290,7 +1408,7 @@
                 }
             },
             "post": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "consumes": [
                     "application/json"
                 ],
@@ -1331,7 +1449,7 @@
         },
         "/api/v1/site/group/{id}": {
             "delete": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1354,7 +1472,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"删除成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"删除成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -1364,7 +1482,7 @@
         },
         "/api/v1/site/guide": {
             "get": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1390,7 +1508,7 @@
         },
         "/api/v1/site/logoUpload": {
             "post": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1423,7 +1541,7 @@
         },
         "/api/v1/site/tags": {
             "put": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1458,7 +1576,7 @@
         },
         "/api/v1/site/users": {
             "put": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1493,7 +1611,7 @@
         },
         "/api/v1/site/{id}": {
             "delete": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1516,7 +1634,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"删除成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"删除成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -1526,7 +1644,7 @@
         },
         "/api/v1/sites": {
             "get": {
-                "description": "站点关接口",
+                "description": "站点相关接口",
                 "tags": [
                     "站点管理"
                 ],
@@ -1924,7 +2042,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"删除成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"删除成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -2077,7 +2195,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"头像更新成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -2251,7 +2369,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"更新成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"重置成功\", \"data\": nil}",
                         "schema": {
                             "type": "string"
                         }
@@ -2310,7 +2428,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 0, \"msg\": \"删除成功\", \"data\": nil}",
+                        "description": "{\"code\": 0, \"msg\": \"删除成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -2512,6 +2630,9 @@
                     "description": "指针类型，可以确保使用Updates方法更新时，如果值为空时也能更新成功",
                     "type": "string"
                 },
+                "helper_url": {
+                    "type": "string"
+                },
                 "icon": {
                     "type": "string"
                 },
@@ -2547,6 +2668,9 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "password_expired_at": {
                     "type": "string"
                 },
                 "phone_number": {
@@ -2585,6 +2709,9 @@
                 "id"
             ],
             "properties": {
+                "ctyun_id": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -2593,6 +2720,9 @@
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "password_expired_at": {
+                    "type": "string"
                 },
                 "phone_number": {
                     "type": "string"
@@ -2703,6 +2833,10 @@
                     "description": "OAuth2.0客户端：客户端ID",
                     "type": "string"
                 },
+                "nonce": {
+                    "description": "OIDC客户端：随机码",
+                    "type": "string"
+                },
                 "redirect_uri": {
                     "description": "OAuth2.0客户端：重定向URL",
                     "type": "string"
@@ -2757,6 +2891,10 @@
                     "type": "string"
                 },
                 "code": {
+                    "type": "string"
+                },
+                "nonce": {
+                    "description": "OIDC客户端：随机码",
                     "type": "string"
                 },
                 "redirect_uri": {
@@ -2927,6 +3065,9 @@
                 "client_id": {
                     "type": "string"
                 },
+                "nonce": {
+                    "type": "string"
+                },
                 "redirect_uri": {
                     "type": "string"
                 },
@@ -3034,6 +3175,38 @@
                 }
             }
         },
+        "service.SettingsUpdate": {
+            "type": "object",
+            "properties": {
+                "externalUrl": {
+                    "type": "string"
+                },
+                "issuer": {
+                    "type": "string"
+                },
+                "ldapAddress": {
+                    "type": "string"
+                },
+                "ldapBindDn": {
+                    "type": "string"
+                },
+                "ldapBindPassword": {
+                    "type": "string"
+                },
+                "ldapFilterAttribute": {
+                    "type": "string"
+                },
+                "ldapSearchDn": {
+                    "type": "string"
+                },
+                "ldapUserPasswordExpireDate": {
+                    "type": "string"
+                },
+                "mfa": {
+                    "type": "string"
+                }
+            }
+        },
         "service.SiteCreate": {
             "type": "object",
             "required": [
@@ -3060,6 +3233,9 @@
                     "type": "string"
                 },
                 "entity_id": {
+                    "type": "string"
+                },
+                "helper_url": {
                     "type": "string"
                 },
                 "icon": {
@@ -3225,6 +3401,10 @@
                     "description": "Nginx代理客户端：回调地址",
                     "type": "string"
                 },
+                "nonce": {
+                    "description": "OIDC客户端：随机码",
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -3284,6 +3464,10 @@
                     "type": "string"
                 },
                 "code": {
+                    "type": "string"
+                },
+                "nonce": {
+                    "description": "OIDC客户端：随机码",
                     "type": "string"
                 },
                 "redirect_uri": {
