# utils/struct.go
@@ -2,13 +2,15 @@ package utils
 
 // excludedFields 不记录日志的字段
 var excludedFields = map[string]struct{}{
-	"password":      {},
-	"re_password":   {},
-	"client_id":     {},
-	"client_secret": {},
-	"certificate":   {},
-	"mfa_code":      {},
-	"DeletedAt":     {},
+	"password":         {},
+	"re_password":      {},
+	"client_id":        {},
+	"client_secret":    {},
+	"certificate":      {},
+	"mfa_code":         {},
+	"DeletedAt":        {},
+	"ldapBindPassword": {},
+	"mailPassword":     {},
 }
 
 // FilterFields 递归过滤敏感字段
